Porting mega-commit - Make it compile and run - Use StreamCodecs in packets - Switch use of ItemStack NBT to DataComponents - Update to 1.20.6